--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@clerk/clerk-react": "^5.20.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.2",
-    "react-toastify": "^10.0.6"
+    "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
